--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -87,7 +87,7 @@
 \label{chap:introduction}
 %----------------------------------------------------------------------------------------
 
-Artificial Intelligence (AI) has experienced an unprecedented surge in prominence and utility in recent years, emerging as a transformative force across diverse domains. From powering autonomous vehicles to aiding healthcare diagnosis and recommendation systems, AI applications have become increasingly woven into the fabric of our daily lives. However, this rapid proliferation has ushered in a pressing concern about the pervasive presence of bias within AI systems.
+Artificial Intelligence (AI) has experienced an unprecedented surge in prominence and utility in recent years, emerging as a transformative force across diverse domains. From powering autonomous vehicles to aiding healthcare diagnosis and recommendation systems, AI applications have become increasingly woven into the fabric of daily lives. However, this rapid proliferation has ushered in a pressing concern about the pervasive presence of bias within AI systems.
 
 The concept of bias in AI pertains to the inadvertent or systematic preference shown towards specific groups or characteristics within the data, algorithms, or decision-making processes. This partiality leads to outcomes that are unjust, unfair, and unequal. In this era of AI-driven decision-making, the imperative to address bias is not just a technological challenge but a moral and societal necessity. Additionally, the ethical principle of fairness underscores the collective aspiration to ensure that AI systems yield equitable and just results for all individuals, regardless of their personal attributes.
 
@@ -101,21 +101,21 @@ This work proposes the Fair-by-Design workflow, offering multiple solutions to a
 
 The objective is to compare not only the accuracy but also the value of specific fairness metrics at the conclusion of the workflow. By contrasting these outcomes with a scenario where fairness assumptions are not made, the goal is to provide a comprehensive assessment of both accuracy and fairness within the proposed framework.
 
-The structure of this thesis unfolds as follows: The \cref{chap:background} conducts a thorough review of the existing approaches and methodologies designed to address bias and promote fairness in the development of AI systems. This chapter lays the groundwork upon which our innovative Fair-by-Design workflow is built. The \cref{chap:contribution} chapter delves into the intricacies of the workflow, elucidating the seamless integration of various fairness approaches into the design process. The \cref{chap:validation} meticulously presents the results derived from the application of these fairness approaches, offering an empirical comparison of their performance and effectiveness. Finally, the \cref{chap:conclusions} not only imparts insights gleaned from our research but also outlines prospective directions for further advancements in this critical and ever-evolving field.
+The structure of this thesis unfolds as follows: The \cref{chap:background} conducts a thorough review of the existing approaches and methodologies designed to address bias and promote fairness in the development of AI systems. This chapter lays the groundwork upon which the innovative Fair-by-Design workflow is built. The \cref{chap:contribution} chapter delves into the intricacies of the workflow, elucidating the seamless integration of various fairness approaches into the design process. The \cref{chap:validation} meticulously presents the results derived from the application of these fairness approaches, offering an empirical comparison of their performance and effectiveness. Finally, the \cref{chap:conclusions} not only imparts insights gleaned from this research but also outlines prospective directions for further advancements in this critical and ever-evolving field.
 
 %----------------------------------------------------------------------------------------
 \chapter{State of the Art} % or Background
 \label{chap:background}
 
-This chapter provides a comprehensive overview of the preceding works and the scientific literature that have paved the way for the implementation of fair-by-design methods in our research. The journey begins with a thorough examination of the multifaceted field of \emph{artificial intelligence} and its wide-ranging applications, including its pivotal roles in critical sectors and socio-technical systems. Within this context, it's important to delve deeply into the intricate issues of \emph{bias} and \emph{fairness} in AI systems, acknowledging the essential foundation upon which our work is built. 
+This chapter provides a comprehensive overview of the preceding works and the scientific literature that have paved the way for the implementation of fair-by-design methods in this research. The journey begins with a thorough examination of the multifaceted field of \emph{artificial intelligence} and its wide-ranging applications, including its pivotal roles in critical sectors and socio-technical systems. Within this context, it's important to delve deeply into the intricate issues of \emph{bias} and \emph{fairness} in AI systems, acknowledging the essential foundation upon which this work is built. 
 
 Artificial Intelligence (\emph{AI}) stands at the forefront of technological innovation, significantly reshaping diverse sectors, from healthcare to finance and transportation. To comprehensively grasp the transformative potential of AI, it is essential to explore its applications and the complex ecosystems in which it operates. This chapter endeavors to unravel the intricate web of AI systems and their profound impact on society.
 
-However, the proliferation of AI brings with it the inherent challenge of bias. As AI systems learn from vast datasets, they may inadvertently perpetuate and exacerbate existing prejudices, resulting in \emph{bias} within the algorithms. Recognizing this challenge as a critical one, our exploration extends into the various dimensions of bias, highlighting its multifaceted nature and the potential consequences it carries. 
+However, the proliferation of AI brings with it the inherent challenge of bias. As AI systems learn from vast datasets, they may inadvertently perpetuate and exacerbate existing prejudices, resulting in \emph{bias} within the algorithms. Recognizing this challenge as a critical one, this exploration extends into the various dimensions of bias, highlighting its multifaceted nature and the potential consequences it carries. 
 
-Moreover, in our quest for equitable AI, the concept of \emph{fairness} emerges as a beacon of hope. This chapter dissects the concept of fairness within AI systems, exploring the intricate ethical considerations that underlie the pursuit of equitable outcomes for all individuals. The chapter further investigates technical dimensions of fairness, acknowledging that it is not merely a goal but a fundamental ethical principle that underpins our work. 
+Moreover, looking for for equitable AI, the concept of \emph{fairness} emerges as a beacon of hope. This chapter dissects the concept of fairness within AI systems, exploring the intricate ethical considerations that underlie the pursuit of equitable outcomes for all individuals. The chapter further investigates technical dimensions of fairness, acknowledging that it is not merely a goal but a fundamental ethical principle that underpins our work. 
 
-Through this comprehensive exploration, it's provided the way for the implementation of fair-by-design methods. This chapter is not only a testament to the foundation on which our research stands but also a testament to the complexity of the AI landscape, its potential for societal transformation, and the imperative of mitigating bias and promoting fairness while forging ahead in the development of AI systems. 
+Through this comprehensive exploration, it's provided the way for the implementation of fair-by-design methods. This chapter is not only a testament to the foundation on which the research stands but also a testament to the complexity of the AI landscape, its potential for societal transformation, and the imperative of mitigating bias and promoting fairness while forging ahead in the development of AI systems. 
 
 
 \section{Artificial Intelligence}
@@ -158,7 +158,7 @@ The final stage of the traditional ML workflow is evaluating the model's perform
 \newpage
 \section{Bias}
 
-Artificial Intelligence (AI) is undeniably a transformative force, poised to reshape multiple dimensions of our existence in profound ways. Its versatile applications extend far and wide, from refining and expediting decision-making processes to seamlessly automating mundane and repetitive tasks. In this ever-evolving landscape, AI systems are becoming increasingly integrated into our daily experiences, orchestrating a paradigm shift in the way people interact with the world around them. 
+Artificial Intelligence (AI) is undeniably a transformative force, poised to reshape multiple dimensions of the existence in profound ways. Its versatile applications extend far and wide, from refining and expediting decision-making processes to seamlessly automating mundane and repetitive tasks. In this ever-evolving landscape, AI systems are becoming increasingly integrated into daily experiences, orchestrating a paradigm shift in the way people interact with the world around them. 
 
 However, amidst the excitement and optimism surrounding AI's potential, a growing concern resonates both within the AI community and society as a whole. This concern revolves around the pervasive issue of biases intricately woven into the very fabric of AI algorithms. 
 
@@ -168,7 +168,7 @@ The consequences of these biases are far-reaching and profound. They not only un
 
 Addressing bias in AI is a complex and ongoing challenge. It requires a multifaceted approach that encompasses not only improved data collection and curation but also transparency in AI decision-making processes. Researchers and engineers are working tirelessly to develop techniques for bias detection and mitigation. Additionally, there is a growing push for diverse representation in the AI development community to ensure that the creation of AI systems considers a wide array of perspectives. 
 
-In conclusion, while the promise of AI is immense, the journey towards harnessing its potential responsibly and equitably is an imperative one. Moving forward in this AI-driven era, it is essential to remain vigilant in identifying and rectifying biases, ensuring that AI truly serves as a force for positive change in our evolving world. \cite{10.1145/3308560.3317590}
+In conclusion, while the promise of AI is immense, the journey towards harnessing its potential responsibly and equitably is an imperative one. Moving forward in this AI-driven era, it is essential to remain vigilant in identifying and rectifying biases, ensuring that AI truly serves as a force for positive change in an always faster evolving world. \cite{10.1145/3308560.3317590}
 
 \subsection{Understanding Bias in AI}
 
@@ -1228,7 +1228,7 @@ This entails that any combination of demographic groups, defined by the protecte
 
 By striving for equal representation of combinations of protected attributes, is addressed a fundamental aspect of fairness that transcends individual attributes. This approach provides a more nuanced understanding of fairness by considering the intersections of various demographic groups. It encourages a broader examination of potential biases that may arise when considering multiple attributes simultaneously.
 
-Incorporating this definition of fairness into the dataset rebalancing process enables us to promote a comprehensive notion of fairness, aligning with the principles of equal opportunity and non-discrimination across all combinations of protected attributes. Our subsequent algorithm and experimental evaluation are designed to actualize this definition and demonstrate its effectiveness in achieving a more equitable representation within the dataset.
+Incorporating this definition of fairness into the dataset rebalancing process enables us to promote a comprehensive notion of fairness, aligning with the principles of equal opportunity and non-discrimination across all combinations of protected attributes. The subsequent algorithm and experimental evaluation are designed to actualize this definition and demonstrate its effectiveness in achieving a more equitable representation within the dataset.
 
 At this point it's necessary to begin with a formalization for the algorithm itself.
 
@@ -1473,7 +1473,7 @@ It's important to provide technical details about the implementation of the two 
 
 \subsection{Fairness through data rebalancing}
 
-An essential facet of the Fairness through Rebalancing algorithm within our workflow lies in the nuanced process of generating data to augment the dataset. At each iteration of the algorithm, the combination value is selected, pinpointing the subset of the dataframe where that specific combination occurs. Within this subset, a meticulous computation unfolds.
+An essential facet of the Fairness through Rebalancing algorithm within the workflow lies in the nuanced process of generating data to augment the dataset. At each iteration of the algorithm, the combination value is selected, pinpointing the subset of the dataframe where that specific combination occurs. Within this subset, a meticulous computation unfolds.
 
 \lstinputlisting[
 	%float,
@@ -1613,13 +1613,13 @@ The sensitive attributes detection, and its filtering to detect the main relevan
 
 The dataset documentation provided the information related to the type of each attribute (e.g. Continuous or Categorical). Starting from this information the variables have been pre-processed as established in the usual data pre-processing sub-step of the \emph{Fair-by-Design Workflow} proposed in this work.
 
-After an exhaustive analysis of the dataset description provided by stakeholders, a comprehensive review revealed that certain aspects of the dataset could be optimized for our intended purposes. In this vein, a strategic decision has been made to remove 68 columns from the dataset.
+After an exhaustive analysis of the dataset description provided by stakeholders, a comprehensive review revealed that certain aspects of the dataset could be optimized for the purposes. In this vein, a strategic decision has been made to remove 68 columns from the dataset.
 
-The removal process was driven by the identification of intrinsic redundancy within the dataset. Several columns were found to contain overlapping or duplicative information, providing no additional value to our analysis. Moreover, a subset of columns exhibited poor semantic meaning and relevance to the specific objectives of our project.
+The removal process was driven by the identification of intrinsic redundancy within the dataset. Several columns were found to contain overlapping or duplicative information, providing no additional value to the analysis. Moreover, a subset of columns exhibited poor semantic meaning and relevance to the specific objectives of this project.
 
-By excising these 68 columns, we aim to refine the dataset and focus on the most essential and informative variables. This process is integral to enhancing the precision of our analyses, facilitating a more nuanced understanding of the data, and ultimately contributing to the success of our project.
+By excising these 68 columns, we aim to refine the dataset and focus on the most essential and informative variables. This process is integral to enhancing the precision of the work, facilitating a more nuanced understanding of the data, and ultimately contributing to the success of it.
 
-This decision aligns with our commitment to optimizing the quality of the data at our disposal, ensuring that every variable retained serves a meaningful purpose in the context of our analysis. If you have any inquiries or would like further details on the column removal process, please feel free to reach out.
+This decision aligns with the commitment to optimizing the quality of the data available, ensuring that every variable retained serves a meaningful purpose in the analytical job. 
 
 The resulting dataset, used for this real case scenario, is a dataset of 100 columns.
 
@@ -1758,9 +1758,9 @@ On the previous models is applied the GridSearch with a \emph{cv} of 10 in order
 
 \end{enumerate}
 
-Each machine learning model in our study is trained using a training dataset comprising 67\% of the original data, with the remaining 33\% reserved for testing purposes. To provide a more granular analysis, we've segmented the data based on the students' grade levels. Let \( G4 \) represent the subset of the original dataset filtered to include only students enrolled in grade 4.
+Each machine learning model in this study is trained using a training dataset comprising 67\% of the original data, with the remaining 33\% reserved for testing purposes. To provide a more granular analysis, we've segmented the data based on the students' grade levels. Let \( G4 \) represent the subset of the original dataset filtered to include only students enrolled in grade 4.
 
-For the grade 4 dataset (\( G4 \)), the outcomes for every model are presented. Specifically, are highlighted the best-performing model identified during our evaluation process and report its accuracy on the corresponding test set.
+For the grade 4 dataset (\( G4 \)), the outcomes for every model are presented. Specifically, are highlighted the best-performing model identified during the evaluation process and report its accuracy on the corresponding test set.
 
 This focused analysis on grade 4 allows us to uncover insights that are specific to this grade level. Beyond the accuracy, for each algorithm chosen in the workflow it's performed a fairness evaluation on the results in order to assess the trade-off and the relationship between accuracy and fairness.
 
@@ -1775,11 +1775,11 @@ Before delving into the evaluation of accuracy and fairness metrics, it is imper
     \hline
     \textbf{Model} & \textbf{Best parameters} \\
     \hline
-    RandomForest Classifier  &  {'criterion': 'log\textunderscore loss', 'max\textunderscore depth': 40, 'max\textunderscore leaf\textunderscore nodes': 40, 'n\textunderscore estimators': 70} \\
+    RandomForest Classifier  &  {70, 'log\textunderscore loss', 40, 40} \\
     \hline
-    LGB Classifier & {'learning\textunderscore rate': 0.1, 'min\textunderscore child\textunderscore samples': 30, 'n\textunderscore estimators': 300, 'num\textunderscore leaves': 40} \\
+    LGB Classifier & {0.1, 300, 'n\textunderscore estimators': 300, 40, 30} \\
     \hline
-    DecisionTree Classifier & {'criterion': 'gini', 'max\textunderscore depth': 30, 'max\textunderscore leaf\textunderscore nodes': 20} \\
+    DecisionTree Classifier & {'gini', 30, 20} \\
     \hline
 \end{tabular}
 
@@ -1829,11 +1829,11 @@ The confluence of a 99\% accuracy rate and a minimal Demographic Parity of 0.018
     \hline
     \textbf{Model} & \textbf{Best parameters} \\
     \hline
-    RandomForest Classifier  &  {'criterion': 'entropy', 'max\textunderscore depth': 40, 'max\textunderscore leaf\textunderscore nodes': 40, 'n\textunderscore estimators': 90} \\
+    RandomForest Classifier  &  {90, 'entropy', 40, 40} \\
     \hline
-    LGB Classifier & {'learning\textunderscore rate': 0.05, 'min\textunderscore child\textunderscore samples': 20, 'n\textunderscore estimators': 100, 'num\textunderscore leaves': 20} \\
+    LGB Classifier & {0.05, 100, 20, 20} \\
     \hline
-    DecisionTree Classifier & {'criterion': 'gini', 'max\textunderscore depth': 10, 'max\textunderscore leaf\textunderscore nodes': 10} \\
+    DecisionTree Classifier & {'gini', 10, 10} \\
     \hline
 \end{tabular}
 
@@ -1882,11 +1882,11 @@ This outcome prompts a reflective evaluation of the trade-offs between accuracy 
     \hline
     \textbf{Model} & \textbf{Best parameters} \\
     \hline
-    RandomForest Classifier  &  {'criterion': 'entropy', 'max\textunderscore depth': 10, 'max\textunderscore leaf\textunderscore nodes': 40, n\textunderscore estimators': 70} \\
+    RandomForest Classifier  &  {70, 'entropy', 10, 40} \\
     \hline
-    LGB Classifier & {'learning\textunderscore rate': 0.05, 'min\textunderscore child\textunderscore samples': 20, 'n\textunderscore estimators': 100, 'num\textunderscore leaves': 20} \\
+    LGB Classifier & {0.05, 100, 20, 20} \\
     \hline
-    DecisionTree Classifier & {'criterion': 'gini', 'max\textunderscore depth': 10, 'max\textunderscore leaf\textunderscore nodes': 10} \\
+    DecisionTree Classifier & {'gini', 10, 10} \\
     \hline
 \end{tabular}
 
@@ -1935,11 +1935,11 @@ In essence, the interplay between a reduced accuracy of 0.52 and a maximal Demog
 
 In culmination, this thesis has provided a comprehensive exploration into the application of a fair-by-design workflow within a singular real-world scenario, employing various algorithms. The key takeaway lies in the revelation that the consistent application of the fair-by-design ethos can yield disparate outcomes, ranging from remarkable to suboptimal, contingent upon the algorithms selected.
 
-Our findings underscore the critical importance of embedding fairness considerations at every stage of the workflow. Notably, we have witnessed instances where meticulous attention to fairness from preprocessing to model deployment resulted in astonishingly positive outcomes. Conversely, the lack of diligence in incorporating fairness considerations throughout the workflow led to results that fell significantly short of equitable and ethical standards.
+The findings underscore the critical importance of embedding fairness considerations at every stage of the workflow. Notably, we have witnessed instances where meticulous attention to fairness from preprocessing to model deployment resulted in astonishingly positive outcomes. Conversely, the lack of diligence in incorporating fairness considerations throughout the workflow led to results that fell significantly short of equitable and ethical standards.
 
 The implications of these divergent outcomes extend beyond the scope of this thesis. They prompt further exploration and analysis along two promising trajectories for future research. Firstly, a deep dive into the pre-processing algorithms that yielded exceptional results offers an avenue for uncovering specific methodologies that effectively mitigate biases and enhance fairness. Understanding the nuances of these pre-processing techniques may illuminate strategies applicable to a broader range of scenarios.
 
-Secondly, our work suggests an expansion of the fair-by-design workflow to include additional steps, injecting fairness and ethical concepts at multiple stages. This holistic approach may involve scrutinizing data acquisition, refining feature engineering, and scrutinizing post-processing decisions. Analyzing the impact of injecting fairness considerations into these dimensions could provide a more nuanced understanding of the interplay between algorithmic decisions and ethical outcomes.
+Secondly, this work suggests an expansion of the fair-by-design workflow to include additional steps, injecting fairness and ethical concepts at multiple stages. This holistic approach may involve scrutinizing data acquisition, refining feature engineering, and scrutinizing post-processing decisions. Analyzing the impact of injecting fairness considerations into these dimensions could provide a more nuanced understanding of the interplay between algorithmic decisions and ethical outcomes.
 
 In conclusion, this thesis not only contributes insights into the fair-by-design paradigm but also beckons further exploration. It serves as a clarion call for ongoing research endeavors to unravel the intricacies of fairness in algorithmic decision-making. As technology advances, the ethical imperative to understand, implement, and refine fair-by-design approaches becomes increasingly paramount.
 
