--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -52,6 +52,8 @@
 
 \input{./sections/abstract.tex}
 
+\input{./sections/introduction.tex}
+
 
 %\begin{acknowledgements} % this is optional
 %Never too far down, to come back
