--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -1,18 +1,18 @@
 \begin{abstract}
 
-    This work presents an in-depth approach to address fairness and bias mitigation in the design and development of data-driven methods. The primary contribution of this study is the proposal and implementation of an innovative \emph{Fair-by-Design} workflow that incorporates various strategies for bias mitigation within data, algorithms, and decision-making processes.
-
-    The work focuses on the educational data of the Canary Islands, leveraging a dataset encompassing detailed information about student performance and educational outcomes.
-
-    The primary objective is to ensure equitable and unbiased application of data-driven algorithms within the educational context. 
-
-    The methodology involves the systematic evaluation of multiple bias mitigation strategies. The critical aspect of this research centers on the comparison of these strategies based on their impact on the predictive accuracy of the algorithms. 
-
-    This approach provides practical insights into the trade-offs between fairness and accuracy, showing how several approaches can lead to different accuracy scores on the same dataset and with the same models. 
-
-    The work findings offer valuable insights into the trade-offs between fairness and accuracy when developing data-driven methods for educational data. 
-
-    This thesis contributes to the ongoing discourse on fairness in machine learning and data-driven decision-making. The results provide guidance for stakeholders in the education sector, aiding them in making informed decisions about algorithm deployment to promote fairness and minimize bias within educational systems. 
+    This work provides a comprehensive approach to address fairness and bias mitigation in the design and development of data-driven methods. A central focus is the proposal and implementation of an innovative \emph{Fair-by-Design} workflow, integrating various strategies for bias mitigation within data, algorithms, and decision-making processes.
+    
+    The study adopts a broad perspective on diverse datasets, aiming to establish equitable and unbiased applications of data-driven algorithms across various domains.
+    
+    The primary objective is to ensure the general, equitable, and unbiased application of data-driven algorithms.
+    
+    The methodology systematically evaluates multiple bias mitigation strategies, with a critical emphasis on comparing their impact on the predictive accuracy of the algorithms.
+    
+    This approach yields practical insights into the trade-offs between fairness and accuracy, illustrating how different approaches can lead to varying accuracy scores on the same dataset and with the same models.
+    
+    The findings provide valuable insights into the trade-offs between fairness and accuracy when developing data-driven methods.
+    
+    This thesis significantly contributes to the ongoing discourse on fairness in machine learning and data-driven decision-making. The results offer guidance to stakeholders across sectors, aiding them in making informed decisions about algorithm deployment to promote fairness and minimize bias.
 
 \end{abstract}
     
