feat: state of the art just added

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -68,13 +68,13 @@
 
 \input{./sections/state_of_the_art.tex}
 
-\input{./sections/contribution.tex}
+%\input{./sections/contribution.tex}
 
-\input{./sections/software_architecture.tex}
+% \input{./sections/software_architecture.tex}
 
-\input{./sections/validation.tex}
+%\input{./sections/validation.tex}
 
-\input{./sections/conclusion.tex}
+%\input{./sections/conclusion.tex}
 
 %----------------------------------------------------------------------------------------
 % BIBLIOGRAPHY
