--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -68,7 +68,7 @@
 
 \input{./sections/state_of_the_art.tex}
 
-%\input{./sections/contribution.tex}
+\input{./sections/contribution.tex}
 
 % \input{./sections/software_architecture.tex}
 
