--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -94,5 +94,26 @@ By adopting a Fair-by-Design approach, stakeholders in AI development, ranging f
 
 \end{enumerate}
 
+\section{Steps to Implement a Fair-by-Design Workflow}
+\label{section:steps}
+
+\begin{enumerate}
+
+    \item \emph{Objective Definition:} Clearly articulate the objectives of the system or process being designed, emphasizing the importance of fairness.
+
+    \item \emph{Data Collection:} Determine the types of data needed for the application, establish ethical data collection protocols.
+
+    \item \emph{Data pre-processing:} Prepare the data for the fairness algorithm, through data cleaning and featyre engineering
+    
+    \item \emph{Algorithmic Design and Definitions:} Define and implement fairness-enhancing algorithms across pre-processing, in-processing, and post-processing stages. Provide detailed definitions and explanations for each algorithm.
+
+    \item \emph{Model training and evaluation:} Define the training step, performs the training tuning certain parameters and provides an evaluation of the performances of the models based on accuracy and fairness metrics.
+
+    \item \emph{Model deployment:} Define the change of the environment of the model from a development environment to real world application environment.
+
+\end{enumerate}
+
+\textbf{********************ADD FIGURE HERE***************************+}
+
 
 
